pre extracting library

--- a/web_client/Views/Shared/_Layout.cshtml
+++ b/web_client/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                     <li>@Html.ActionLink("Register implementation", "Register", "Home")</li>
                     <li>@Html.ActionLink("Login implementation", "Login", "Home")</li>
                     <li>@Html.ActionLink("Logout implementation", "Logout", "Home")</li>
-                    <li>@Html.ActionLink("List users implementation", "List", "Home")</li>
+                    <li>@Html.ActionLink("List users implementation", "ListUsers", "Home")</li>
                 </ul>
             </div>
         </div>
