Misc webui upgrades

--- a/web_client/Views/Home/Index.cshtml
+++ b/web_client/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
+<h1>Index page, test wcf connection</h1>
 WCF connection test result: @ViewData["WCFTestResult"]
