--- a/web_client/Views/Home/Login.cshtml
+++ b/web_client/Views/Home/Login.cshtml
@@ -7,15 +7,8 @@
 
 @using (Html.BeginForm("LoginAction", "Home"))
 {
-    @Html.LabelFor(model => model.Username);
-    @Html.EditorFor(model => model.Username);
-    @Html.ValidationMessageFor(model => model.Username);
-    <br />
-    @Html.LabelFor(model => model.Password);
-    @Html.EditorFor(model => model.Password);
-    @Html.ValidationMessageFor(model => model.Password);
+    @Html.EditorForModel();
     <br/>
-//    where is button? 
+    //where is button?
     <input type="submit" value="Login"/>
-
 }
