--- a/web_client/Views/Shared/Error.cshtml
+++ b/web_client/Views/Shared/Error.cshtml
@@ -9,6 +9,7 @@
     <hgroup>
         <h1>Ошибка.</h1>
         <h2>При обработке запроса произошла ошибка.</h2>
+        @ViewData["Message"]
     </hgroup>
 </body>
 </html>
