First register form implementation

--- a/web_client/Views/Home/Login.cshtml
+++ b/web_client/Views/Home/Login.cshtml
@@ -9,6 +9,6 @@
 {
     @Html.EditorForModel();
     <br/>
-    //where is button?
+    //where is button helper?
     <input type="submit" value="Login"/>
 }
